trying to use newer google places api version